fix: text contrast issue

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-text: #D0D0D0;
+  --color-text: #E0E0E0;
   --font-family-base: 'Source Serif Pro', Georgia, 'Times New Roman', Times, serif;
   --font-family-heading: 'Poppins', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   --color-main: rgb(128, 128, 192);
